# RUST-Real-time_plots_using_FLTK_and_Plotters

./: Cargo.toml  build.rs
src/: main.rs  myuifile.fl  myuifile.rs
