[package]
name = "FLTK-Multithread1"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^0.13"
plotters = "^0.3.0"
plotters-backend = "^0.3.0"
plotters-bitmap = "0.3.0"
rand = "0.8.2"

[build-dependencies]
fl2rust = "0.2"
